trying to get search icon and expanding search input field

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="content-side">
         <div id="header" class="shadow">
             <div id="search">
-                <input type="text" id="search_value" placeholder="Search...">
+                <input type="text" id="search_value" placeholder="&#xF002; Search..." style="font-family: Arial, 'Font Awesome 5 Pro'">
             </div>
             <div id="user-info">
                 <div>
