removed .idea/ directory

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div id="user-info">
                 <div>
-                    <i id="notifications" class="far fa-fw fa-bell"></i>
+                    <i id="notifications" class="fas fa-fw fa-bell-on"></i>
                 </div>
                 <div id="user-name">
                     <span>Nic Ortiz</span>
@@ -69,8 +69,8 @@
                         <p>Some text about it. Maybe it will go over a line or two? Let's force it longer. Maybe now?</p>
                         <div class="card-options">
                             <i class="no-select far fa-fw fa-star"></i>
-                            <i class="no-select far fa-fw fa-thumbs-up"></i>
-                            <i class="no-select far fa-fw fa-thumbs-down"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-up"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-down"></i>
                         </div>
                     </div>
 
@@ -79,8 +79,8 @@
                         <p>Some text about it. Maybe it will go over a line or two? Let's force it longer. Maybe now?</p>
                         <div class="card-options">
                             <i class="no-select far fa-fw fa-star"></i>
-                            <i class="no-select far fa-fw fa-thumbs-up"></i>
-                            <i class="no-select far fa-fw fa-thumbs-down"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-up"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-down"></i>
                         </div>
                     </div>
 
@@ -89,8 +89,8 @@
                         <p>Some text about it. Maybe it will go over a line or two? Let's force it longer. Maybe now?</p>
                         <div class="card-options">
                             <i class="no-select far fa-fw fa-star"></i>
-                            <i class="no-select far fa-fw fa-thumbs-up"></i>
-                            <i class="no-select far fa-fw fa-thumbs-down"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-up"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-down"></i>
                         </div>
                     </div>
 
@@ -99,8 +99,8 @@
                         <p>Some text about it. Maybe it will go over a line or two? Let's force it longer. Maybe now?</p>
                         <div class="card-options">
                             <i class="no-select far fa-fw fa-star"></i>
-                            <i class="no-select far fa-fw fa-thumbs-up"></i>
-                            <i class="no-select far fa-fw fa-thumbs-down"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-up"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-down"></i>
                         </div>
                     </div>
 
@@ -109,8 +109,8 @@
                         <p>Some text about it. Maybe it will go over a line or two? Let's force it longer. Maybe now?</p>
                         <div class="card-options">
                             <i class="no-select far fa-fw fa-star"></i>
-                            <i class="no-select far fa-fw fa-thumbs-up"></i>
-                            <i class="no-select far fa-fw fa-thumbs-down"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-up"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-down"></i>
                         </div>
                     </div>
 
@@ -119,8 +119,8 @@
                         <p>Some text about it. Maybe it will go over a line or two? Let's force it longer. Maybe now?</p>
                         <div class="card-options">
                             <i class="no-select far fa-fw fa-star"></i>
-                            <i class="no-select far fa-fw fa-thumbs-up"></i>
-                            <i class="no-select far fa-fw fa-thumbs-down"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-up"></i>
+                            <i class="no-select far fa-fw fa-arrow-alt-down"></i>
                         </div>
                     </div>
                 </div>
