minor styling changes and CSS comments

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <h1>Announcements</h1>
                 <div id="announcements">
                     <div class="announcement">
-                        <h3>Announcement Title</h3>
+                        <h3><a href="#">Announcement Title</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultrices posuere libero, ut facilisis mi vehicula at. Sed non tempus urna. Mauris velit lorem, facilisis a consequat vel, efficitur quis est. Duis vel leo a sapien placerat malesuada vel eget tellus. Vivamus nec imperdiet augue, sit amet accumsan tellus. Duis in venenatis felis. Quisque cursus rhoncus erat vel sodales. Vivamus maximus enim at massa congue pulvinar. Morbi commodo dolor arcu, id porttitor nulla molestie sed. Donec ut porta dui, eget pellentesque purus. Integer eget eleifend erat, vitae aliquam purus. Phasellus iaculis bibendum tellus, sit amet sagittis sapien ultrices eu. Nam vitae viverra neque.
                         </p>
                     </div>
@@ -139,7 +139,7 @@
                     <div class="split"></div>
 
                     <div class="announcement">
-                        <h3>Announcement Title</h3>
+                        <h3><a href="#">Announcement Title</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultrices posuere libero, ut facilisis mi vehicula at. Sed non tempus urna. Mauris velit lorem, facilisis a consequat vel, efficitur quis est. Duis vel leo a sapien placerat malesuada vel eget tellus. Vivamus nec imperdiet augue, sit amet accumsan tellus. Duis in venenatis felis. Quisque cursus rhoncus erat vel sodales. Vivamus maximus enim at massa congue pulvinar. Morbi commodo dolor arcu, id porttitor nulla molestie sed. Donec ut porta dui, eget pellentesque purus. Integer eget eleifend erat, vitae aliquam purus. Phasellus iaculis bibendum tellus, sit amet sagittis sapien ultrices eu. Nam vitae viverra neque.
                         </p>
                     </div>
@@ -147,7 +147,7 @@
                     <div class="split"></div>
 
                     <div class="announcement">
-                        <h3>Announcement Title</h3>
+                        <h3><a href="#">Announcement Title</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultrices posuere libero, ut facilisis mi vehicula at. Sed non tempus urna. Mauris velit lorem, facilisis a consequat vel, efficitur quis est. Duis vel leo a sapien placerat malesuada vel eget tellus. Vivamus nec imperdiet augue, sit amet accumsan tellus. Duis in venenatis felis. Quisque cursus rhoncus erat vel sodales. Vivamus maximus enim at massa congue pulvinar. Morbi commodo dolor arcu, id porttitor nulla molestie sed. Donec ut porta dui, eget pellentesque purus. Integer eget eleifend erat, vitae aliquam purus. Phasellus iaculis bibendum tellus, sit amet sagittis sapien ultrices eu. Nam vitae viverra neque.
                         </p>
                     </div>
@@ -155,7 +155,7 @@
                     <div class="split"></div>
 
                     <div class="announcement">
-                        <h3>Announcement Title</h3>
+                        <h3><a href="#">Announcement Title</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultrices posuere libero, ut facilisis mi vehicula at. Sed non tempus urna. Mauris velit lorem, facilisis a consequat vel, efficitur quis est. Duis vel leo a sapien placerat malesuada vel eget tellus. Vivamus nec imperdiet augue, sit amet accumsan tellus. Duis in venenatis felis. Quisque cursus rhoncus erat vel sodales. Vivamus maximus enim at massa congue pulvinar. Morbi commodo dolor arcu, id porttitor nulla molestie sed. Donec ut porta dui, eget pellentesque purus. Integer eget eleifend erat, vitae aliquam purus. Phasellus iaculis bibendum tellus, sit amet sagittis sapien ultrices eu. Nam vitae viverra neque.
                         </p>
                     </div>
@@ -166,31 +166,31 @@
                 <div id="trending">
                     <div><div class="trending-item">
                         <i class="trending-icon fas fa-3x fa-user-circle"></i>
-                        <span class="trending-id">@heynicortiz</span>
+                        <span class="trending-id"><a href="#">@heynicortiz</a></span>
                         <span class="trending-tagline">Creator</span>
                     </div></div>
 
                     <div> <div class="trending-item">
                         <i class="trending-icon fas fa-3x fa-user-circle"></i>
-                        <span class="trending-id">@heynicortiz</span>
+                        <span class="trending-id"><a href="#">@heynicortiz</a></span>
                         <span class="trending-tagline">Creator</span>
                     </div></div>
 
                     <div><div class="trending-item">
                         <i class="trending-icon fas fa-3x fa-user-circle"></i>
-                        <span class="trending-id">@heynicortiz</span>
+                        <span class="trending-id"><a href="#">@heynicortiz</a></span>
                         <span class="trending-tagline">Creator</span>
                     </div></div>
 
                     <div><div class="trending-item">
                         <i class="trending-icon fas fa-3x fa-user-circle"></i>
-                        <span class="trending-id">@heynicortiz</span>
+                        <span class="trending-id"><a href="#">@heynicortiz</a></span>
                         <span class="trending-tagline">Creator</span>
                     </div></div>
 
                     <div><div class="trending-item">
                         <i class="trending-icon fas fa-3x fa-user-circle"></i>
-                        <span class="trending-id">@heynicortiz</span>
+                        <span class="trending-id"><a href="#">@heynicortiz</a></span>
                         <span class="trending-tagline">Creator</span>
                     </div></div>
                 </div>
